Prevent images from stretching.

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -143,6 +143,7 @@ body {
 }
 
 .post .post-photo img, .post .post-caption img {
+	height: auto;
 	max-width: 100%;
 }
 
